--- a/13 HTML&CSS/3_2ndcopy/index.html
+++ b/13 HTML&CSS/3_2ndcopy/index.html
@@ -44,9 +44,9 @@
         <div class="container-body">
             <!-- Hero section -->
             <section class="hero-section">
-                <div class="flex">
+                <div class="hero-section-container flex">
                     <div class="hero-left">
-                        <img src="./assets/hero-Image.png" width="600px" alt="hero left image">
+                        <img class="hero-left-img" src="./assets/hero-Image.png" alt="hero left image">
                     </div>
                     <div class="hero-right flex">
 
