--- a/13 HTML&CSS/3_2ndcopy/index.html
+++ b/13 HTML&CSS/3_2ndcopy/index.html
@@ -485,7 +485,7 @@
 
             <!-- cta section -->
             <section class="cta-section">
-                <div class="cta-section-container flex">
+                <div class="cta-section-container container flex">
                     
                     <div class="cta-left">
                         <div class="cta-left-inside">
@@ -537,7 +537,7 @@
         </div>
         <hr/>
         <!-- foooter section -->
-        <footer>
+        <footer class="footer-section">
             <div class="footer-container flex">
                 <div class="footer-left">
                     <div class="footer-left-img-container">
