--- a/13 HTML&CSS/2 Prototype_1 (copy)/index.html
+++ b/13 HTML&CSS/2 Prototype_1 (copy)/index.html
@@ -193,25 +193,23 @@
 
             <!-- quote section -->
             <section class="quote-section">
-                <div class="container quote-section-container">
-                    <div class="quote-bg"></div>
-                    <div class="quote-image">
-                        <!-- <img src="./assets/thumb-Image (1).png" alt="back image"> -->
-                    </div>
-                    <div class="quote-card-container">
-                        <p class="quote-sign"><i class="fa-solid fa-quote-left"></i></p>
-                        <p class="large-font">This platform is one of the best companies I have dealt with in Indonesia. They're always happy to help, and i wouldn't hesitate to recommend them.</p>
+                <div class="container quote-section-container flex">
+                    <div class="quote-card flex">
+                        <div class="quote-card-container">
+                            <p class="quote-sign"><i class="fa-solid fa-quote-left"></i></p>
+                            <p class="large-font">This platform is one of the best companies I have dealt with in Indonesia. They're always happy to help, and i wouldn't hesitate to recommend them.</p>
 
-                        <div class="quote-autor flex">
-                            <div>
-                                <p><Strong>Daniel Anderson</strong></p>
-                            </div>
+                            <div class="quote-autor flex">
+                                <div>
+                                    <p><Strong>Daniel Anderson</strong></p>
+                                </div>
 
-                            <div class="quote-verify-container flex">
-                                <img src="./assets/Icon 8.png" class="verify-sign-w" alt="verified-tick">
-                                <p>
-                                    <em class="quote-verify">Verified customer</em>
-                                </p>
+                                <div class="quote-verify-container flex">
+                                    <img src="./assets/Icon 8.png" class="verify-sign-w" alt="verified-tick">
+                                    <p>
+                                        <em class="quote-verify">Verified customer</em>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
