--- a/13 HTML&CSS/3 Prototype_2/index.html
+++ b/13 HTML&CSS/3 Prototype_2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proto Type 2</title>
+    <title>Prototype 2</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -102,37 +102,343 @@
 
             <!-- services section -->
             <section class="services-section">
+                <div class="services-section-container container flex">
+                    <div class="services-head flex">
+                        <h2 class="primary-text">What We Do</h2>
+                        <p class="secondary-text">We work together with our client to execute impactful product.</p>
+                    </div>
+                    <div class="services-card-wrapper flex">
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Oval.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">Branding Identity</h3>
+                                    <p class="service-card-para-text">We make logo and concept for your brand need.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Polygon-2.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">Develoment</h3>
+                                    <p class="service-card-para-text">We code your apps, website and dashboard to you.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Polygon-1.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">UI/UX Design</h3>
+                                    <p class="service-card-para-text">Making beautiful and intuitive design digital product.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Rectangle.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">Microstock</h3>
+                                    <p class="service-card-para-text">We produce million assets for your business need.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Triangle.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">Social Media</h3>
+                                    <p class="service-card-para-text">Planning and maintanance social media for reach audience.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-card flex">
+                            <div class="service-card-content flex">
+                                <div class="service-card-img">
+                                    <img src="./assets/images/Polygon.png" width="30px" alt="servie image">
+                                </div>
+                                <div class="service-card-text">
+                                    <h3 class="service-card-head-text">Research</h3>
+                                    <p class="service-card-para-text">Helping research startup or brand to business needs.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
 
             </section>
 
             <!-- project section -->
             <section class="project-section">
+                <div class="project-section-container container">
+                    <div class="project-container-head">
+                        <label class="label-text">PORTFOLIO</label>
+                        <h2 class="primary-text project-heading-text">Our Projects</h2>
+                    </div>
 
+                    <div class="project-card-wrapper flex"> 
+                        <div class="project-card">
+                            <div class="project-card-content">
+                                <div class="project-image-container">
+                                    <img class="project-image" src="./assets/images/Photo.png" width="350px" alt="">
+                                </div>
+
+                                <div class="project-card-description">
+                                    <label class="project-label-text" for="">Website,Landing</label>
+                                    <h3 class="primary-text project-heading-text">Website Project</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="project-card-content">
+                                <div class="project-image-container">
+                                    <img class="project-image" src="./assets/images/Photo.png" width="350px" alt="">
+                                </div>
+
+                                <div class="project-card-description">
+                                    <label class="project-label-text" for="">Dashboard, UI/UX Design</label>
+                                    <h3 class="primary-text project-heading-text">Dashboard Project</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="project-card-content">
+                                <div class="project-image-container">
+                                    <img class="project-image" src="./assets/images/Photo.png" width="350px" alt="">
+                                </div>
+
+                                <div class="project-card-description">
+                                    <label class="project-label-text" for="">Apps, Mobile,iOs</label>
+                                    <h3 class="primary-text project-heading-text">Apps Project</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </section>
 
             <!-- testimonial section -->
-            <section class="testimonial">
+            <section class="testimonial-section">
+                <div class="testimonial-section-container container">
+                    <div class="testimonial-container-head">
+                        <label class="label-text">TESTIMONIAL</label>
+                        <h2 class="primary-text testimonial-heading-text">What People Say about Us</h2>
+                    </div>
 
+                    <div class="testimonial-card-wrapper flex">
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-content">
+                                <div class="testimonial-card-head flex">
+                                    <div class="testimonial-card-image-wrapper">
+                                        <img src="./assets/images/profile-img.png" alt="testimonial image">
+                                    </div>
+                                    <div class="testimonial-card-head-wrapper flex">
+                                        <p class="primary-text">Jaquon Hart</p>
+                                        <p class="secondary-text">VP Manager - Lizlle Company</p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-description">
+                                    <p class="secondary-text testimonial-card-para">
+                                    "Their UI/UX skills and experince, were key to identifying potential friction points within Our Business Processes, which they fixed or streamlined beautifull."
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-content">
+                                <div class="testimonial-card-head flex">
+                                    <div class="testimonial-card-image-wrapper">
+                                        <img src="./assets/images/profile-img.png" alt="testimonial image">
+                                    </div>
+                                    <div class="testimonial-card-head-wrapper flex">
+                                        <p class="primary-text">Valdemar Forsberg</p>
+                                        <p class="secondary-text">Founder of Digitac Finance</p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-description">
+                                    <p class="secondary-text testimonial-card-para">
+                                    Ehya pushed us to think beyond our initial scope and imagination while ensuring that the design and shape of the platform are continually adjusted based on data.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!-- social links section -->
             <section class="social-link-section">
+                <div class="social-section-container container">
+                    <div class="social-head-container flex">
+                        <label class="label-text">OUR SOCIAL MEDIA</label>
+                        <h2>Let's be Friends</h2>
+                    </div>
+                    <div class="social-card-wrapper flex">
+                        <div class="social-card">
+                            <div class="social-card-content flex">
+                                <div class="social-card-image-container">
+                                    <img class="social-card-img" src="./assets/images/instagram.png" alt="instagram image png">
+                                </div>
+                            
+                                <p class="primary-text social-card-heading">Instagram</p>
+                                <p class="secondary-text social-card-desc">For our Portfolio and Daily activities in office</p>
+                                <a class="social-card-link" href="#">Follow Us --></a>
+                            </div>
+                        </div>
 
+                        <div class="social-card">
+                            <div class="social-card-content flex">
+                                <div class="social-card-image-container">
+                                    <img class="social-card-img" src="./assets/images/twitter.png" alt="instagram image png">
+                                </div>
+
+                                <p class="primary-text social-card-heading">Twitter</p>
+                                <p class="secondary-text social-card-desc">For random thoughts and funny things</p>
+                                <a class="social-card-link" href="#">Follow Us --></a>
+                            </div>
+                        </div>
+
+                        <div class="social-card">
+                            <div class="social-card-content flex">
+                                <div class="social-card-image-container">
+                                    <img class="social-card-img" src="./assets/images/dribbble.png" alt="instagram image png">
+                                </div>
+                                
+                                <p class="primary-text social-card-heading">Dribble</p>
+                                <p class="secondary-text social-card-desc">For Updated & Detailed all of Our Portfolio</p>
+                                <a class="social-card-link" href="#">Follow Us --></a>
+                            </div>
+                        </div>
+
+                        <div class="social-card">
+                            <div class="social-card-content flex">
+                                <div class="social-card-image-container flex">
+                                    <img class="social-card-img" src="./assets/images/youtube.png" alt="instagram image png">
+                                </div>
+
+                                <p class="primary-text social-card-heading">Youtube</p>
+                                <p class="secondary-text social-card-desc">For our video about tutorial and tips on design industry</p>
+                                <a class="social-card-link" href="#">Follow Us --></a>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                </div>
             </section>
 
             <!-- cta section -->
             <section class="cta-section">
-
+                <div class="cta-section-container container flex">
+                    <h2 class="cta-head-text">We're Ready for a challenging Project</h2>
+                    <p class="cta-para-text">Send us your brief and tell your project too. We are ready to help all you need</p>
+                    <div class="cta-button">
+                        <a class="primary-text cta-btn" href=""><b>Let's Discuss it!</b></a>
+                    </div>
+                </div>
             </section>
 
         </div>
 
         <!-- footer section -->
         <footer class="footer-section">
+            <div class="footer-container container flex">
+                <div class="footer-top flex">
+                    <div class="footer-left">
+                        <div class="footer-left-img-container">
+                            <img class="company-logo-footer" src="./assets/images/footer-logo.png" alt="company logo">
+                        </div>
+                        <div class="footer-left-text">
+                            <p class="footer-left-p">Build a modern and creative website with crealand</p>
+                        </div>
+                        <div class="social-logo-container flex">
+                            <img src="./assets/images/google-footer.png" alt="social logo">
+                            <img src="./assets/images/twitter-footer.png" alt="social logo">
+                            <img src="./assets/images/instagram-footer.png" alt="social logo">
+                            <img src="./assets/images/linkedin-footer.png" alt="social logo">
+                            <img src="./assets/images/youtube-footer.png" alt="social logo">
+                        </div>
+                    </div>
 
+                    <div class="footer-right flex">
+                        <div class="footer-right-inner flex">
+
+                            <!-- 1 -->
+                            <div class="footer-info">
+                                <p class="footer-left-p-s"><strong>Product</strong></p>
+                                <p class="footer-left-p">Landing page</p>
+                                <p class="footer-left-p">Features</p>
+                                <p class="footer-left-p">Documentation</p>
+                                <p class="footer-left-p">Referral Program</p>
+                                <p class="footer-left-p">Pricing</p>
+                            </div>
+
+                            <!-- 2 -->
+                            <div class="footer-info">
+                                <p class="footer-left-p-s"><strong>Services</strong></p>
+                                <p class="footer-left-p">Documentation</p>
+                                <p class="footer-left-p">Design</p>
+                                <p class="footer-left-p">Themes</p>
+                                <p class="footer-left-p">Illusration</p>
+                                <p class="footer-left-p">UI Kit</p>
+                            </div>
+
+                            <!-- 3 -->
+                            <div class="footer-info">
+                                <p class="footer-left-p-s"><strong>Company</strong></p>
+                                <p class="footer-left-p">About</p>
+                                <p class="footer-left-p">Terms</p>
+                                <p class="footer-left-p">Privacy Policy</p>
+                                <p class="footer-left-p">Careers</p>
+                            </div>
+
+                            <!-- 4 -->
+                            <div class="footer-info">
+                                <p class="footer-left-p-s"><strong>More</strong></p>
+                                <p class="footer-left-p">Documentaion</p>
+                                <p class="footer-left-p">Licence</p>
+                                <p class="footer-left-p">Change Log</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-bottom flex">
+                    <div class="footer-bottom-img">
+                        <img class="footer-img" src="./assets/images/footer-bottom.png" alt="base">
+                    </div>
+                    <div class="copy-right">
+                        <p class="copy-right-p">Copyright &#169 2019. Crafted with love.</p>
+                    </div>
+                </div>
+            </div>
         </footer>
 
-        <div style="height: 100vh;"></div>
+        <!-- <div style="height: 100vh;"></div> -->
     </div>
 </body>
 </html>
