--- a/15 Combine all/assets/public/kuku-Kube/index.html
+++ b/15 Combine all/assets/public/kuku-Kube/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find the lighter cube</title>
+    <title>Kuku Cube</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,10 @@
                 <span id="scoreText"></span> 
             </p>
         </section>
-        <input type="button" id="startBtn" value="Play" onclick="startGame()"/>
+        <div class="btn-container">
+            <input type="button" id="startBtn" value="Play" onclick="startGame()"/>
+            <input type="button" id="resetBtn" value="Reset" onclick="resetGame()"/>
+        </div>
     </div>
     
 
