--- a/15 Combine all/assets/public/TTT/index.html
+++ b/15 Combine all/assets/public/TTT/index.html
@@ -17,21 +17,28 @@
             <p id="playerTurnMsg"></p>
         </section>
 
-        <div id="tic-tac-toe-container">
-            
-        </div>
+        <table id="tableMain" class="tableMain">
+            <tr>
+                <td id="one">-</td>
+                <td id="two">-</td>
+                <td id="three">-</td>
+            </tr>
+            <tr>
+                <td id="four">-</td>
+                <td id="five">-</td>
+                <td id="six">-</td>
+            </tr>
+            <tr>
+                <td id="seven">-</td>
+                <td id="eight">-</td>
+                <td id="nine">-</td>
+            </tr>
+        </table>
 
         <h2 id="winMsg"></h2>
 
-        <input type="button" id="resetBtn" value="Reset" onclick="resetGame()"/>
+        <input type="button" id="resetBtn" value="Reset"/>
     </div>
-
-
-
-
-
-
-
     <script src="script.js"></script>
 </body>
 </html>
